# worcoder

./: README.md  delay-say.sh  pyproject.toml  test.py
worcoder/: cli.py  encoding.py  rs1024.py  utils.py  wordlist.py  wordlist_data.py
