[tool.poetry]
name = "worcoder"
version = "1.0.1"
description = "Convert string <-> words with RS1024 checksum"
authors = ["Juraj Bednar <juraj@bednar.io>"]
readme = "README.md"
packages = [
    { include = "worcoder" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
